src/ui/sass/modules/_Nav.scss
/** @define Nav */

.yxt-Nav
{
  $nav-text-font-size: $font-size-md !default;
  $nav-text-line-height: $line-height-md !default;
  $nav-text-font-weight: $font-weight-semibold !default;
  $nav-text-color: $color-text-primary !default;
  $nav-text-hover-color: #c5cace !default;
  $nav-text-active-color: $color-brand-primary !default;
  $nav-text-activ-border-width: 2px;
  $nav-text-active-border: $nav-text-activ-border-width solid $color-brand-primary !default;
  $nav-text-focus-background-color: #e9e9e9 !default;

  $nav-dropdown-font-size: 13px !default;
  $nav-dropdown-line-height: $line-height-sm !default;
  $nav-dropdown-font-weight: $font-weight-semibold !default;
  $nav-dropdown-color: $nav-text-color !default;
  $nav-dropdown-hover-color: $nav-dropdown-color !default;
  $nav-dropdown-hover-background-color: #eeeff0 !default;
  $nav-dropdown-width: 250px;

  $nav-border-color: $color-borders !default;

  &-container
  {
    display: flex;
    justify-content: flex-start;
    position: relative;
    border-bottom: $nav-text-activ-border-width solid $nav-border-color;
  }

  &-expanded
  {
    display: flex;
    justify-content: flex-start;
    white-space: nowrap;
    margin: 0;
    padding: 0;
    list-style-type: none;
  }

  &-item
  {
    @include Text(
      $size: $nav-text-font-size,
      $line-height: $nav-text-line-height,
      $weight: $nav-text-font-weight,
      $color: $nav-text-color
    );

    padding-top: 6px;
    padding-bottom: 6px;
    padding-left: $base-spacing;
    padding-right: $base-spacing;
    text-transform: uppercase;
    display: flex;
    align-items: center;
    text-decoration: none;

    &:hover
    {
      color: $nav-text-active-color;

      @media (hover: none)
      {
        color: $nav-text-color;
      }
    }

    &:focus
    {
      background-color: $nav-text-focus-background-color;
      color: $nav-text-color;
    }

    &:not(:last-child)
    {
      flex-shrink: 0;
    }

    &--more
    {
      position: absolute;
      visibility: hidden;
    }

    &.is-active
    {
      color: $nav-text-active-color;
      border-bottom: $nav-text-active-border;
      font-weight: $font-weight-semibold;
      margin-bottom: -$nav-text-activ-border-width;
    }
  }

  &-moreContainer
  {
    margin-left: auto;
    position: relative;
  }

  &-more
  {
    display: flex;
    align-items: center;
    position: relative;
    overflow: visible;
    border: none;
    background: transparent;
  }

  &-moreTextWrapper
  {
    display: flex;
    align-items: center;
  }

  &-moreIcon
  {
    display: flex;
    margin-top: 1px;
    margin-right: 7px;

    .Icon--kabob
    {
      height: 11px;
      width: 3px;
      margin-top: 1px;
    }
  }

  &-static
  {
    overflow: auto;
  }

  &-static::-webkit-scrollbar {
    display: none;
  }

  &-modal
  {
    white-space: nowrap;
    display: none;
    padding-top: 6px;
    padding-bottom: 6px;
    position: absolute;
    background-color: white;
    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
    border-radius: 8px;
    top: 30px;
    right: 0;
    z-index: $z-index-nav-more-modal;
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: $nav-dropdown-width;
    word-break: break-all;
    white-space: normal;

    &.is-active
    {
      display: block;
    }
  }

  &-dropDownItem
  {
    @include Text(
      $size: $nav-dropdown-font-size,
      $line-height: $nav-dropdown-line-height,
      $weight: $nav-dropdown-font-weight,
      $color: $nav-dropdown-color
    );

    display: block;
    padding-top: 6px;
    padding-bottom: 4px;
    padding-left: 16px;
    padding-right: 16px;
    text-align: left;

    &:hover,
    &:focus
    {
      color: $nav-dropdown-hover-color;
      background-color: $nav-dropdown-hover-background-color;
    }
  }
}

